production/client/kubernetes/client.deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: client-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
        role: rolling-update
    spec:
      restartPolicy: Always
      containers:
        - name: client-container
          image: localhost:5000/labosdiscordbot-client
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
