production/client/kubernetes/client.service.yml
kind: Service
apiVersion: v1

metadata:
  name: client-service
  labels:
    app: client
    role: rolling-update

spec:
  selector:
    app: client
    role: rolling-update
  type: LoadBalancer
  ports:
    - name: nginx
      port: 80
      targetPort: 80
      nodePort: 30950
