production/client/kubernetes/client.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: client-ingress

spec:
  rules:
    - host: client.dop.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 80
